[gd_scene load_steps=7 format=3 uid="uid://caeexvcpmco74"]

[ext_resource type="Script" uid="uid://dsnkpk16xq0dd" path="res://scripts/build_menu.gd" id="1_6dosh"]
[ext_resource type="Texture2D" uid="uid://b6lot4pjcm57k" path="res://scenes/menus/GoldMine_Inactive.png" id="1_asuh4"]
[ext_resource type="Texture2D" uid="uid://bvcpqss8i5vvm" path="res://scenes/menus/Warrior_Blue.png" id="2_i668k"]
[ext_resource type="Texture2D" uid="uid://d38u5rshq543h" path="res://scenes/menus/G_Idle_(NoShadow).png" id="4_uxllu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6dosh"]
atlas = ExtResource("2_i668k")
region = Rect2(48, 32, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxllu"]
atlas = ExtResource("4_uxllu")
region = Rect2(48, 51, 43, 45)

[node name="BuildMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6dosh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 144.0
offset_bottom = 72.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
offset_right = 140.0
offset_bottom = 72.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MineButton" type="TextureButton" parent="Panel/MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("1_asuh4")
ignore_texture_size = true
stretch_mode = 5

[node name="KnightButton" type="TextureButton" parent="Panel/MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_6dosh")
ignore_texture_size = true
stretch_mode = 5

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = -40.0
offset_right = 127.0
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2/MarginContainer"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="Panel2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Gold: {0}"

[node name="TextureRect" type="TextureRect" parent="Panel2/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_uxllu")
expand_mode = 2
stretch_mode = 5

[connection signal="pressed" from="Panel/MarginContainer/ButtonContainer/MineButton" to="." method="_on_mine_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/ButtonContainer/KnightButton" to="." method="_on_knight_button_pressed"]
